--- a/index.html
+++ b/index.html
@@ -13,18 +13,29 @@
 
         <h1>Rock, Paper, Scissors</h1>
 
+        <div class="score">
+            <p class="playerScore">0</p>
+            <p class="botScore">0</p>
+        </div>
+
+        <div class="desc">
+            <h1 class="win-msg"></h1>
+            <p class="message"></p>
+            <button class="another-round">Play Another Round</button>
+        </div>
+
         <div class="result">
 
-            <p id="player-sign"></p>
-            <p id="bot-sign"></p>
+            <p id="player-sign" class="sign"></p>
+            <p id="bot-sign" class="sign"></p>
 
         </div>
 
         <div class="choices">
 
-            <button id="rock">✊</button>
-            <button id="paper">✋</button>
-            <button id="scissors">✌️</button>
+            <button class="btn" data-rock>✊</button>
+            <button class="btn" data-paper>✋</button>
+            <button class="btn" data-scissor>✌️</button>
 
         </div>
 
